fix: link preview for actual chat links, remove scrollbar-gutter, fix subheader for mobile, fix form with contact list

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatRightPanel/right-chat-panel.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatRightPanel/right-chat-panel.css
@@ -131,7 +131,6 @@
     @apply flex-y;
     @apply h-full;
     @apply p-2;
-    @apply need-gutter;
     @apply overflow-y-auto custom-scrollbar;
 }
 .author-list-tab .avatar-badge {
