--- a/src/dotnet/Chat.UI.Blazor/Components/ContactSelector/contact-selector.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ContactSelector/contact-selector.css
@@ -3,7 +3,6 @@
     @apply flex-y grow;
     @apply px-2;
     @apply overflow-y-auto custom-scrollbar;
-    @apply need-gutter;
 }
 
 /* List item */
